# ymmybttn

./: .env.local.example  .gitignore  BUSINESS_LOGIC.md.txt  CLAUDE.md  DATABASE_SCHEMA.md  PLANNING.md.txt  README.md  TASKS.md  TASKS.md.md  middleware.ts  next.config.js  package-lock.json  package.json
.claude/: settings.local.json
app/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
database/: README.md  development-schema.sql
database/migrations/: 001_enable_extensions.sql  002_core_reference_tables.sql  (+8 more)
desktop-app/: FINAL_IMPLEMENTATION_SUMMARY.md  PRODUCTION_SYNC_IMPLEMENTATION.md  SECURE_RLS_POLICY.sql  SECURITY_SETUP.md  TIMESTAMP_SYNC_IMPLEMENTATION.md  apply-secure-rls.js  fix-icons.sh  index.html  package-lock.json  package.json  schema.sql  setup.sh  vite.config.ts
desktop-app/src-tauri/: Cargo.toml  create-icons.js  create-proper-icons.js  fix-icons.js  tauri.conf.json
desktop-app/src-tauri/capabilities/: default.json
desktop-app/src-tauri/icons/: 32x32.xcf  icon.icns  red small burger.icns:Zone.Identifier  small burger.ico:Zone.Identifier
desktop-app/src-tauri/migrations/: 0001_initial_schema.sql  0002_update_products_table.sql  0003_add_timestamp_sync_tracking.sql  0004_align_products_with_sync.sql
desktop-app/src-tauri/src/: commands.rs  config.rs  error.rs  main.rs  state.rs
desktop-app/src-tauri/src/csv_import/: mod.rs
desktop-app/src-tauri/src/db/: mod.rs  models.rs
desktop-app/src-tauri/src/sync/: mod.rs
hooks/: use-auth.ts
lib/: auth.ts
scripts/: reset-dev-database.js
types/: database.ts
(+28 files in other folders)
